When it asks to write name of folder where to install OS, type something 'reactos files' and setup will fail. Black screen.
r54643, VMWare 8
- is duplicated by
-
CORE-9343 Boot fails if WINDIR contains spaces
-
- Resolved
-
When it asks to write name of folder where to install OS, type something 'reactos files' and setup will fail. Black screen.
r54643, VMWare 8
CORE-9343
Boot fails if WINDIR contains spaces