[USETUP]: Add basic installation directory validity check (only for whitespace for now). Patch by Edijs Kolesnikovics, see CORE-6149. Indeed, some ReactOS (and Windows as well) components do not support the system directory having spaces, in particular SMSS: this is due to the basic command-line parsing rules of SMSS that considers that the presence of a space in the command-line is equivalent to a separator, be it in or out a quoted string.

svn path=/trunk/; revision=66995